--- a/templates/base.html
+++ b/templates/base.html
@@ -203,5 +203,7 @@
     <script src="{% static 'js/animation.js' %}" defer></script>
     <script src="{% static 'js/counters.js' %}" defer></script>
     <script src="{% static 'js/cookiesConsent.portfolio.js' %}" defer></script>
+
+    {% block extra_scripts %}{% endblock %}
 </body>
 </html>
